# istanbul-transportation-insights

./: .gitignore  README.md  upload_to_gcs.sh
.github/workflows/: terraform.yml
bruin/istanbul-transportations-insights-pipeline/: pipeline.yml  pyproject.toml
bruin/istanbul-transportations-insights-pipeline/assets/: extract_hourly_traffic_density.py  silver_trafficDensity.sql
dagster-bruin/: README.md  __init__.py  pyproject.toml
dagster-bruin/dagster_bruin/: __init__.py  bruin_asset_translator.py  bruin_assets.py  bruin_cli_resource.py  bruin_project.py
dagster-bruin/dagster_bruin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dagster-bruin/dagster_bruin_tests/: manifest_fixture.json  test_bruin_asset_translator.py
dagster-bruin/example_integration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data-preprocessing/: pipeline.yml
data-preprocessing/assets/data-cleaning/: dc_hourlyTransportation.sql  dc_railSystemsStats.sql  dc_trafficDensity.sql
data-preprocessing/assets/data-transformation/: dt_hourlyTransportation.sql  dt_railSystemsStats.sql  (+1 more)
pipeline/: requirements.txt
traffic-density/: pipeline.yml  pyproject.toml
traffic-density/assets/: extract_hourly_traffic_density.py  extract_hourly_traffic_density_202405.py  extract_hourly_transportation.py  extract_hourly_transportation_202405.py  extract_rail_system_stats.py  extract_rail_system_stats_2024.py  public_transportation_data.bkp  rail_system_stations_data.bkp  silver_hourlyTransportation.sql  silver_hourly_traffic_density.sql  silver_railSystemStats.sql  silver_trafficDensity.sql
(+49 files in other folders)
